--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Family Financials</title>
+	<title>Family Financial</title>
 	<!-- UIkit CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.21/dist/css/uikit.min.css" />
 	<!-- Custom CSS -->
@@ -19,7 +19,7 @@
 
 		<div class="uk-navbar-left uk-margin-left">
 			
-			<h1 class="uk-margin-left"><i class="fas fa-coins"></i> Family Financials</h1>
+			<h1 class="uk-margin-left"><i class="fas fa-coins"></i> Family Financial</h1>
 
 		</div>
 
